# stock-alerter

./: Cargo.toml  README.md  urls.txt
src/: main.rs
